:zap: finished font updates

--- a/src/components/MarqueeWall.astro
+++ b/src/components/MarqueeWall.astro
@@ -38,42 +38,42 @@ import Rive from "../assets/img/framework-logos/Rive.jpg"
     <div class="home-logo-wrapper">
       <div class="the-row original">
         <div class="clients-grid animate-slide">
-          <Image src={JS} alt="JavaScript Logo" class="client-logo" />
+          <Image src={JS} alt="JavaScript Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={TS} alt="TypeScript Logo" class="client-logo" />
+          <Image src={TS} alt="TypeScript Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={PHP} alt="PHP Logo" class="client-logo" />
+          <Image src={PHP} alt="PHP Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Next} alt="Next.js Logo" class="client-logo" />
+          <Image src={Next} alt="Next.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Nuxt} alt="Nuxt.js Logo" class="client-logo" />
+          <Image src={Nuxt} alt="Nuxt.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={AstroLogo} alt="Astro Logo" class="client-logo" />
+          <Image src={AstroLogo} alt="Astro Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
       <div class="the-row clone">
         <div class="clients-grid animate-slide">
-          <Image src={JS} alt="JavaScript Logo" class="client-logo" />
+          <Image src={JS} alt="JavaScript Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={TS} alt="TypeScript Logo" class="client-logo" />
+          <Image src={TS} alt="TypeScript Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={PHP} alt="PHP Logo" class="client-logo" />
+          <Image src={PHP} alt="PHP Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={CSS} alt="CSS Logo" class="client-logo" />
+          <Image src={CSS} alt="CSS Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Mongo} alt="MongoDB Logo" class="client-logo" />
+          <Image src={Mongo} alt="MongoDB Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Postgres} alt="PostgreSQL Logo" class="client-logo" />
+          <Image src={Postgres} alt="PostgreSQL Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
     </div>
@@ -81,42 +81,42 @@ import Rive from "../assets/img/framework-logos/Rive.jpg"
     <div class="home-logo-wrapper reverse">
       <div class="the-row original">
         <div class="clients-grid animate-slide-alt">
-          <Image src={Tailwind} alt="Tailwind CSS Logo" class="client-logo" />
+          <Image src={Tailwind} alt="Tailwind CSS Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={GSAP} alt="GSAP Logo" class="client-logo" />
+          <Image src={GSAP} alt="GSAP Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={React} alt="React Logo" class="client-logo" />
+          <Image src={React} alt="React Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Vue} alt="Vue.js Logo" class="client-logo" />
+          <Image src={Vue} alt="Vue.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Electron} alt="Electron Logo" class="client-logo" />
+          <Image src={Electron} alt="Electron Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Three} alt="Three.js Logo" class="client-logo" />
+          <Image src={Three} alt="Three.js Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
       <div class="the-row clone">
         <div class="clients-grid animate-slide-alt">
-          <Image src={Tailwind} alt="Tailwind CSS Logo" class="client-logo" />
+          <Image src={Tailwind} alt="Tailwind CSS Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={GSAP} alt="GSAP Logo" class="client-logo" />
+          <Image src={GSAP} alt="GSAP Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={React} alt="React Logo" class="client-logo" />
+          <Image src={React} alt="React Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Vue} alt="Vue.js Logo" class="client-logo" />
+          <Image src={Vue} alt="Vue.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Electron} alt="Electron Logo" class="client-logo" />
+          <Image src={Electron} alt="Electron Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Three} alt="Three.js Logo" class="client-logo" />
+          <Image src={Three} alt="Three.js Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
     </div>
@@ -126,42 +126,42 @@ import Rive from "../assets/img/framework-logos/Rive.jpg"
     <div class="home-logo-wrapper">
       <div class="the-row original">
         <div class="clients-grid animate-slide">
-          <Image src={AE} alt="Adobe After Effects Logo" class="client-logo" />
+          <Image src={AE} alt="Adobe After Effects Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={PS} alt="Photoshop Logo" class="client-logo" />
+          <Image src={PS} alt="Photoshop Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={AI} alt="Adobe Illustrator Logo" class="client-logo" />
+          <Image src={AI} alt="Adobe Illustrator Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={C4D} alt="Cinema 4D Logo" class="client-logo" />
+          <Image src={C4D} alt="Cinema 4D Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Figma} alt="Figma Logo" class="client-logo" />
+          <Image src={Figma} alt="Figma Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Rive} alt="Rive Logo" class="client-logo" />
+          <Image src={Rive} alt="Rive Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
       <div class="the-row clone">
         <div class="clients-grid animate-slide">
-          <Image src={AE} alt="Adobe After Effects Logo" class="client-logo" />
+          <Image src={AE} alt="Adobe After Effects Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={PS} alt="Photoshop Logo" class="client-logo" />
+          <Image src={PS} alt="Photoshop Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={AI} alt="Adobe Illustrator Logo" class="client-logo" />
+          <Image src={AI} alt="Adobe Illustrator Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={C4D} alt="Cinema 4D Logo" class="client-logo" />
+          <Image src={C4D} alt="Cinema 4D Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Figma} alt="Figma Logo" class="client-logo" />
+          <Image src={Figma} alt="Figma Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Rive} alt="Rive Logo" class="client-logo" />
+          <Image src={Rive} alt="Rive Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
     </div>
@@ -169,42 +169,42 @@ import Rive from "../assets/img/framework-logos/Rive.jpg"
     <div class="home-logo-wrapper reverse">
       <div class="the-row original">
         <div class="clients-grid animate-slide-alt">
-          <Image src={AWS} alt="AWS Logo" class="client-logo" />
+          <Image src={AWS} alt="AWS Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Firebase} alt="Firebase Logo" class="client-logo" />
+          <Image src={Firebase} alt="Firebase Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={GraphQL} alt="GraphQL Logo" class="client-logo" />
+          <Image src={GraphQL} alt="GraphQL Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Prisma} alt="Prisma Logo" class="client-logo" />
+          <Image src={Prisma} alt="Prisma Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Apollo} alt="Apollo Logo" class="client-logo" />
+          <Image src={Apollo} alt="Apollo Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Nest} alt="NestJS Logo" class="client-logo" />
+          <Image src={Nest} alt="NestJS Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
       <div class="the-row clone">
         <div class="clients-grid animate-slide-alt">
-          <Image src={AWS} alt="AWS Logo" class="client-logo" />
+          <Image src={AWS} alt="AWS Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Firebase} alt="Firebase Logo" class="client-logo" />
+          <Image src={Firebase} alt="Firebase Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={GraphQL} alt="GraphQL Logo" class="client-logo" />
+          <Image src={GraphQL} alt="GraphQL Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Prisma} alt="Prisma Logo" class="client-logo" />
+          <Image src={Prisma} alt="Prisma Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Apollo} alt="Apollo Logo" class="client-logo" />
+          <Image src={Apollo} alt="Apollo Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Nest} alt="NestJS Logo" class="client-logo" />
+          <Image src={Nest} alt="NestJS Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
     </div>
@@ -214,42 +214,42 @@ import Rive from "../assets/img/framework-logos/Rive.jpg"
     <div class="home-logo-wrapper">
       <div class="the-row original">
         <div class="clients-grid animate-slide">
-          <Image src={Vite} alt="Vite Logo" class="client-logo" />
+          <Image src={Vite} alt="Vite Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Mongo} alt="MongoDB Logo" class="client-logo" />
+          <Image src={Mongo} alt="MongoDB Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Postgres} alt="PostgreSQL Logo" class="client-logo" />
+          <Image src={Postgres} alt="PostgreSQL Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={WP} alt="WordPress Logo" class="client-logo" />
+          <Image src={WP} alt="WordPress Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Nuxt} alt="Nuxt.js Logo" class="client-logo" />
+          <Image src={Nuxt} alt="Nuxt.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Express} alt="Express Logo" class="client-logo" />
+          <Image src={Express} alt="Express Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
       <div class="the-row clone">
         <div class="clients-grid animate-slide">
-          <Image src={Vite} alt="Vite Logo" class="client-logo" />
+          <Image src={Vite} alt="Vite Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Mongo} alt="MongoDB Logo" class="client-logo" />
+          <Image src={Mongo} alt="MongoDB Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Postgres} alt="PostgreSQL Logo" class="client-logo" />
+          <Image src={Postgres} alt="PostgreSQL Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={WP} alt="WordPress Logo" class="client-logo" />
+          <Image src={WP} alt="WordPress Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Nuxt} alt="Nuxt.js Logo" class="client-logo" />
+          <Image src={Nuxt} alt="Nuxt.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide">
-          <Image src={Express} alt="Express Logo" class="client-logo" />
+          <Image src={Express} alt="Express Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
     </div>
@@ -257,42 +257,42 @@ import Rive from "../assets/img/framework-logos/Rive.jpg"
     <div class="home-logo-wrapper reverse">
       <div class="the-row original">
         <div class="clients-grid animate-slide-alt">
-          <Image src={Tailwind} alt="Tailwind CSS Logo" class="client-logo" />
+          <Image src={Tailwind} alt="Tailwind CSS Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={GSAP} alt="GSAP Logo" class="client-logo" />
+          <Image src={GSAP} alt="GSAP Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={React} alt="React Logo" class="client-logo" />
+          <Image src={React} alt="React Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Vue} alt="Vue.js Logo" class="client-logo" />
+          <Image src={Vue} alt="Vue.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Electron} alt="Electron Logo" class="client-logo" />
+          <Image src={Electron} alt="Electron Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Three} alt="Three.js Logo" class="client-logo" />
+          <Image src={Three} alt="Three.js Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
       <div class="the-row clone">
         <div class="clients-grid animate-slide-alt">
-          <Image src={Tailwind} alt="Tailwind CSS Logo" class="client-logo" />
+          <Image src={Tailwind} alt="Tailwind CSS Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={GSAP} alt="GSAP Logo" class="client-logo" />
+          <Image src={GSAP} alt="GSAP Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={React} alt="React Logo" class="client-logo" />
+          <Image src={React} alt="React Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Vue} alt="Vue.js Logo" class="client-logo" />
+          <Image src={Vue} alt="Vue.js Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Electron} alt="Electron Logo" class="client-logo" />
+          <Image src={Electron} alt="Electron Logo" class="framework-logo" loading="eager" />
         </div>
         <div class="clients-grid animate-slide-alt">
-          <Image src={Three} alt="Three.js Logo" class="client-logo" />
+          <Image src={Three} alt="Three.js Logo" class="framework-logo" loading="eager" />
         </div>
       </div>
     </div>
@@ -331,7 +331,7 @@ import Rive from "../assets/img/framework-logos/Rive.jpg"
           .clients-grid {
             @apply flex gap-12 w-24 h-24 p-2 bg-white rounded-lg;
 
-            .client-logo {
+            .framework-logo {
               @apply h-full w-full object-contain object-center;
             }
 
