--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -53,6 +53,7 @@
       "plus w-8 h-8 lg:w-24 lg:h-24 inline-block rounded-md -ml-0 lg:-ml-2 -top-1 lg:-top-4 relative rotate-45"
     plusImage.src = PlusImg
     plusImage.alt = "Plus Icon"
+    plusImage.loading = "lazy"
     const replaceWithPlus = splitText.words.find(word => {
       return word.parentElement?.classList.contains("plus")
     })
@@ -63,6 +64,7 @@
       "js w-8 h-8 lg:w-24 lg:h-24 inline-block rounded-md ml-2 lg:ml-7 -top-1 lg:-top-4 relative"
     jsImage.src = JSImg
     jsImage.alt = "JavaScript Logo"
+    jsImage.loading = "lazy"
     const replaceWithJs = splitText.words.find(word => {
       return word.parentElement?.classList.contains("js")
     })
@@ -73,6 +75,7 @@
       "ts w-8 h-8 lg:w-24 lg:h-24 inline-block rounded-md ml-2 lg:ml-8 -top-1 lg:-top-4 relative"
     tsImage.src = TSImg
     tsImage.alt = "TypeScript Logo"
+    tsImage.loading = "lazy"
     const replaceWithTs = splitText.words.find(word => {
       return word.parentElement?.classList.contains("ts")
     })
@@ -134,6 +137,7 @@
     })
 
     manager.ctx?.add(() => {
+
       gsap.timeline().from(splitTitle.words, {
         y: "100%",
         opacity: 0,
