--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,11 @@
 ---
 import "../styles/global.css"
-
 import Logo from "../assets/img/logo.svg?url"
-
+import pretendard200 from "@fontsource/pretendard/files/pretendard-latin-100-normal.woff2?url"
+import pretendard400 from "@fontsource/pretendard/files/pretendard-latin-400-normal.woff2?url"
+import pretendard500 from "@fontsource/pretendard/files/pretendard-latin-500-normal.woff2?url"
+import pretendard700 from "@fontsource/pretendard/files/pretendard-latin-700-normal.woff2?url"
+import pretendard900 from "@fontsource/pretendard/files/pretendard-latin-900-normal.woff2?url"
 import { ClientRouter } from "astro:transitions"
 import Footer from "../components/Footer.astro"
 import Header from "../components/Header.astro"
@@ -18,6 +21,11 @@ import Mouse from "../components/Mouse.astro"
     <ClientRouter />
     <link rel="icon" type="image/svg+xml" href={Logo} />
     <meta name="generator" content={Astro.generator} />
+    <link rel="preload" href={pretendard200} as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href={pretendard400} as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href={pretendard500} as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href={pretendard700} as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href={pretendard900} as="font" type="font/woff2" crossorigin />
     <title>Gustavo Gomez - Full Stack Developer</title>
   </head>
   <body>
