:fire: finished about section

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,10 +1,13 @@
 ---
+import RotatingStamp from "./RotatingStamp.astro";
+
 
 ---
 
 <div class="about-section invert-area">
   <div class="inner-container">
     <h2 class="title-about">About Me</h2>
+    <RotatingStamp />
     <div class="part-one">
       <p class="split-one">
         I’m a full-stack developer with 10<span class="plus hoverable">+</span> years of experience building web,
