:fire: finished stage one of the portfolio section

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@ import RotatingStamp from "./RotatingStamp.astro";
 
 ---
 
-<div class="about-section invert-area">
+<section class="about-section invert-area">
   <div class="inner-container">
     <h2 class="title-about">About Me</h2>
     <RotatingStamp />
@@ -23,7 +23,7 @@ import RotatingStamp from "./RotatingStamp.astro";
       </p>
     </div>
   </div>
-</div>
+</section>
 
 <script>
   import gsap from "gsap"
