--- a/src/components/AboutTransition.astro
+++ b/src/components/AboutTransition.astro
@@ -91,6 +91,9 @@
       &.bg {
         @apply z-1 object-contain;
       }
+      svg {
+        transform: scale(1.01) !important;
+      }
     }
   }
 </style>
