--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import About from '../components/About.astro';
 import Hero from '../components/Hero.astro';
 import Spacer from '../components/Padding.astro';
+import ProjectsSlider from '../components/ProjectsSlider.astro';
 import Layout from '../layouts/Layout.astro';
 
 
@@ -12,6 +13,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
 	<Hero />
 	<About />
+	<ProjectsSlider />
 	<Spacer />
 </Layout>
 
