--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -143,6 +143,7 @@ import AboutTransition from "./AboutTransition.astro"
             },
             defaults: {
               ease: "linear",
+              force3D: false,
             },
           })
           .fromTo(
