--- a/src/components/Padding.astro
+++ b/src/components/Padding.astro
@@ -5,6 +5,6 @@
 <style>
   @reference '../styles/global.css';
   section.spacer {
-    @apply h-screen w-full max-w-screen;
+    @apply h-screen w-full max-w-screen bg-black;
   }
 </style>
