:fire: fixed image imports

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import profilePic from "../assets/img/profile-pic-optimized.png"
-import Image from "astro/components/Image.astro"
+import { Image } from "astro:assets"
 import github from "../assets/img/github.svg"
 import linkedin from "../assets/img/linkedin.svg"
 import CodeArea from "./CodeArea.astro"
