--- a/src/components/MarqueeWall.astro
+++ b/src/components/MarqueeWall.astro
@@ -1,5 +1,5 @@
 ---
-import Image from "astro/components/Image.astro"
+import { Image } from "astro:assets"
 import JS from "../assets/img/framework-logos/Javascript.jpg"
 import TS from "../assets/img/framework-logos/Typescript.jpg"
 import WP from "../assets/img/framework-logos/WordPress.jpg"
