--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,11 +50,6 @@ initSmoothScrolling()
 
 <style>
   body {
-    overscroll-behavior: none;
-    #smooth-wrapper {
-      #smooth-content {
-        will-change: transform;
-      }
-    }
+    overflow: hidden;
   }
 </style>
