--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,5 @@
 ---
-import RotatingStamp from "./RotatingStamp.astro";
-
-
+import RotatingStamp from "./RotatingStamp.astro"
 ---
 
 <section class="about-section invert-area">
@@ -10,9 +8,11 @@ import RotatingStamp from "./RotatingStamp.astro";
     <RotatingStamp />
     <div class="part-one">
       <p class="split-one">
-        I’m a full-stack developer with 10<span class="plus hoverable">+</span> years of experience building web,
-        mobile, and desktop apps. I've worked with different languages and
-        frameworks, but I specialize in <span class="js hoverable">JS</span> & <span class="ts hoverable">TS</span>.
+        I’m a full-stack developer with 10<span class="plus hoverable">+</span> years
+        of experience building web, mobile, and desktop apps. I've worked with different
+        languages and frameworks, but I specialize in <span class="js hoverable"
+          >JS</span
+        > & <span class="ts hoverable">TS</span>.
       </p>
     </div>
     <div class="part-two">
@@ -57,7 +57,7 @@ import RotatingStamp from "./RotatingStamp.astro";
     plusImage.src = PlusImg
     plusImage.alt = "Plus Icon"
     plusImage.loading = "lazy"
-    const replaceWithPlus = splitText.words.find(word => {
+    const replaceWithPlus = splitText.words.find((word) => {
       return word.parentElement?.classList.contains("plus")
     })
     replaceWithPlus?.replaceChildren(plusImage)
@@ -68,7 +68,7 @@ import RotatingStamp from "./RotatingStamp.astro";
     jsImage.src = JSImg
     jsImage.alt = "JavaScript Logo"
     jsImage.loading = "lazy"
-    const replaceWithJs = splitText.words.find(word => {
+    const replaceWithJs = splitText.words.find((word) => {
       return word.parentElement?.classList.contains("js")
     })
     replaceWithJs?.replaceChildren(jsImage)
@@ -79,68 +79,79 @@ import RotatingStamp from "./RotatingStamp.astro";
     tsImage.src = TSImg
     tsImage.alt = "TypeScript Logo"
     tsImage.loading = "lazy"
-    const replaceWithTs = splitText.words.find(word => {
+    const replaceWithTs = splitText.words.find((word) => {
       return word.parentElement?.classList.contains("ts")
     })
     replaceWithTs?.replaceChildren(tsImage)
 
     // Plus Image Animation
-    document.querySelector(".about-section .plus")?.addEventListener("mouseover", () => {
-      gsap.to(plusImage, {
-        scale: 1.08,
-        rotation: 135,
-        duration: 1,
-        ease: "elastic.out",
+    document
+      .querySelector(".about-section .plus")
+      ?.addEventListener("mouseover", () => {
+        gsap.to(plusImage, {
+          scale: 1.08,
+          rotation: 135,
+          duration: 1,
+          ease: "elastic.out",
+        })
       })
-    })
 
-    document.querySelector(".about-section .plus")?.addEventListener("mouseout", () => {
-      gsap.to(plusImage, {
-        scale: 1,
-        rotation: 45,
-        duration: 1,
-        ease: "elastic.out",
+    document
+      .querySelector(".about-section .plus")
+      ?.addEventListener("mouseout", () => {
+        gsap.to(plusImage, {
+          scale: 1,
+          rotation: 45,
+          duration: 1,
+          ease: "elastic.out",
+        })
       })
-    })
 
     // JS Image Animation
-    document.querySelector(".about-section .js")?.addEventListener("mouseover", () => {
-      gsap.to(jsImage, {
-        scale: 1.3,
-        duration: 1,
-        rotate: 20,
-        ease: "elastic.out",
+    document
+      .querySelector(".about-section .js")
+      ?.addEventListener("mouseover", () => {
+        gsap.to(jsImage, {
+          scale: 1.3,
+          duration: 1,
+          rotate: 20,
+          ease: "elastic.out",
+        })
       })
-    })
-    document.querySelector(".about-section .js")?.addEventListener("mouseout", () => {
-      gsap.to(jsImage, {
-        scale: 1,
-        duration: 1,
-        rotate: 0,
-        ease: "elastic.out",
+    document
+      .querySelector(".about-section .js")
+      ?.addEventListener("mouseout", () => {
+        gsap.to(jsImage, {
+          scale: 1,
+          duration: 1,
+          rotate: 0,
+          ease: "elastic.out",
+        })
       })
-    })
 
     // TS Image Animation
-    document.querySelector(".about-section .ts")?.addEventListener("mouseover", () => {
-      gsap.to(tsImage, {
-        scale: 1.3,
-        duration: 1,
-        rotate: -20,
-        ease: "elastic.out",
+    document
+      .querySelector(".about-section .ts")
+      ?.addEventListener("mouseover", () => {
+        gsap.to(tsImage, {
+          scale: 1.3,
+          duration: 1,
+          rotate: -20,
+          ease: "elastic.out",
+        })
       })
-    })
-    document.querySelector(".about-section .ts")?.addEventListener("mouseout", () => {
-      gsap.to(tsImage, {
-        scale: 1,
-        duration: 1,
-        rotate: 0,
-        ease: "elastic.out",
+    document
+      .querySelector(".about-section .ts")
+      ?.addEventListener("mouseout", () => {
+        gsap.to(tsImage, {
+          scale: 1,
+          duration: 1,
+          rotate: 0,
+          ease: "elastic.out",
+        })
       })
-    })
 
     manager.ctx?.add(() => {
-
       gsap.timeline().from(splitTitle.words, {
         y: "100%",
         opacity: 0,
@@ -181,7 +192,6 @@ import RotatingStamp from "./RotatingStamp.astro";
           end: "bottom center+=10%",
         },
       })
-
     })
   })
 </script>
@@ -190,7 +200,9 @@ import RotatingStamp from "./RotatingStamp.astro";
   @reference '../styles/global.css';
 
   .about-section {
-    @apply w-full mx-auto px-4 xl:px-0 py-12 lg:py-40 bg-transparent bg-linear-to-t from-black via-90% via-black to-transparent relative z-70 overflow-hidden;    .inner-container {
+    @apply w-screen px-4 xl:px-0 py-12 lg:py-40 bg-transparent bg-linear-to-t from-black via-90% via-black to-transparent relative z-70 overflow-hidden;
+    box-shadow: 1px 1px 0px 1px #000;
+    .inner-container {
       @apply w-full max-w-site mx-auto flex flex-col;
       .title-about {
         @apply text-[64px] lg:text-[128px] font-bold mb-4 text-white;
