--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -170,7 +170,8 @@ import AboutTransition from "./AboutTransition.astro"
               duration: 5,
               stagger: 0.7,
             }
-          ).to(
+          )
+          .to(
             almostAllBentos,
             {
               scale: 0,
@@ -224,11 +225,10 @@ import AboutTransition from "./AboutTransition.astro"
           .fromTo(
             bento3,
             {
-              x: 0,
               y: 0,
             },
             {
-              y: "-100%",
+              y: "-80%",
               duration: 10,
               stagger: 1.5,
             }
@@ -240,7 +240,7 @@ import AboutTransition from "./AboutTransition.astro"
             },
             {
               duration: 20,
-              scale: 5,
+              scale: 4,
             },
             "-=9"
           )
@@ -282,6 +282,9 @@ import AboutTransition from "./AboutTransition.astro"
     @apply pt-28 lg:pt-8 h-auto flex flex-col items-center justify-center z-10;
     .main-section {
       @apply w-screen max-w-site mx-auto h-full px-4 lg:px-10 overflow-hidden;
+      @media (max-width: 1023px) {
+        box-shadow: 0px 1.5px 0px 1px #000;
+      }
       @media (min-width: 1024px) {
         overflow: unset;
       }
@@ -292,7 +295,7 @@ import AboutTransition from "./AboutTransition.astro"
           @apply rounded-lg p-6 origin-center;
         }
         .bento-1 {
-          @apply relative bg-slate-900 flex flex-col justify-between overflow-hidden z-50 h-[72vh] lg:h-full;
+          @apply relative bg-slate-900 flex flex-col justify-between overflow-hidden z-50 h-[65vh] lg:h-full;
           @apply col-span-4 lg:col-span-2 row-span-2 lg:row-span-4 col-start-1 row-start-1;
           h1 {
             @apply relative z-40 text-[28px] leading-tight lg:text-5xl font-bold text-white;
