--- a/src/components/ProjectSlide.astro
+++ b/src/components/ProjectSlide.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "astro:assets"
+import type { Achievement } from "./types"
 
 const {
   title,
@@ -11,21 +12,28 @@ const {
   images,
   isCurrent,
 } = Astro.props
+
 ---
 
 <div class={isCurrent ? "slide slide--current" : "slide"}>
   <div class="slide__content">
     <div class="left-side">
       <div class="overview">
-        <p class="slide__description">{description}</p>
+        <p class="slide__description backdrop-blur-xs bg-slate-900/10 p-4 rounded-xl">{description}</p>
       </div>
       <div class="highlights">
         <p class="text-xl mb-4">Highlights:</p>
         {
           achievements && achievements.length > 0 && (
             <ul class={achievements.length > 3 ? "slide__achievements columns-2" : "slide__achievements"}>
-              {achievements.map((achievement: string) => (
-                <li class="slide__achievement mb-0 lg:mb-4">{achievement}</li>
+              {achievements.map((achievement: Achievement) => (
+                <li class="slide__achievement mb-0 lg:mb-4">
+                  {achievement.URL ? (
+                    <a href={achievement.URL} target="_blank" class="slide__link hoverable bg-transparent hover:bg-orange-500 border border-solid border-white hover:border-orange-500 text-white px-2 py-1 mt-2 rounded-full transition-colors ease-in-out duration-300"> {achievement.achievement} </a>
+                  ) : (
+                    <span class="slide__link"> {achievement.achievement} </span>
+                  )}
+                </li>
               ))}
             </ul>
           )
