--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,9 +4,11 @@ import { Image } from "astro:assets"
 import github from "../assets/img/github.svg"
 import linkedin from "../assets/img/linkedin.svg"
 import CodeArea from "./CodeArea.astro"
-import video from "../assets/video/waves.mp4"
+import videoSafari from "../assets/video/blob-safari.mp4"
+import videoChrome from "../assets/video/blob-chrome.webm"
 import MarqueeWall from "./MarqueeWall.astro"
 import AboutTransition from "./AboutTransition.astro"
+import DialZoom from "./DialZoom.astro"
 ---
 
 <section class="site-hero">
@@ -25,19 +27,23 @@ import AboutTransition from "./AboutTransition.astro"
       </div>
       <div class="bento-item bento-3 invert-area">
         <AboutTransition />
-        <video
-          class="bg-video z-2"
-          width="600"
-          height="100%"
-          autoplay
-          loop
-          muted
-          playsinline
-        >
-          <source src={video} />
-        </video>
+        <div class="bg-video">
+            <video autoplay loop muted playsinline>
+                <source 
+                    src={videoSafari} 
+                    type='video/mp4; codecs="hvc1"'>
+                <source 
+                    src={videoChrome} 
+                    type="video/webm">
+            </video>
+        </div>
       </div>
-      <div class="bento-item bento-4">4</div>
+      <div class="bento-item bento-4">
+        <div class="absolute inset-0">
+          <div class="absolute inset-0 -z-10 h-full w-full bg-gray-50 bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]"></div>
+        </div>
+        <DialZoom />
+      </div>
       <div class="bento-item bento-5">
         <div class="image-section">
           <Image
@@ -317,7 +323,7 @@ import AboutTransition from "./AboutTransition.astro"
           }
         }
         .bento-4 {
-          @apply hidden lg:block bg-sky-200 row-span-5 col-start-4 row-start-1 z-40;
+          @apply hidden lg:block bg-gray-100 row-span-5 col-start-4 row-start-1 z-40 !p-0 overflow-hidden;
         }
         .bento-5 {
           @apply bg-slate-200 flex flex-col lg:flex-row justify-center items-center space-y-4 space-x-0 lg:space-x-6 z-30;
