:zap: Fixed init error of abilities section

--- a/src/components/DialZoom.astro
+++ b/src/components/DialZoom.astro
@@ -216,6 +216,7 @@ const smoothMouseDial = () => {
   $introComplete.subscribe((value) => {
     if (value && units.length > 0) {
       introAnimation()
+      smoothMouseDial()
     }
   })
 
